# si-prefix

./: .gitattributes  .gitignore  COPYING  MANIFEST.in  README.md  pavement.py  pyproject.toml  setup.cfg  setup.py  version.py
.github/workflows/: ci.yml
docs/: Makefile  README.rst  conf.py  generate_modules.py  index.rst  make.bat  modules.rst  si_prefix.rst  si_prefix.tests.rst
si_prefix/: __init__.py  _version.py  si_prefix.cpp  si_prefix.pxd  si_prefix.pyx
si_prefix/src/: si_prefix.hpp
si_prefix/tests/: test_si_format.py
tests/: test_si_format.py
